--- a/one.html
+++ b/one.html
@@ -1,13 +1,33 @@
 <html>
     <head>
         <title>My Title</title>
-        <script src="one.js" type="text/javascript">
+        <script  type="text/javascript">
         
+//this is a comment
+    document.write("<h1>Darshani Kaushalya Diwakara</h1>");
+    document.write("<h2>Software Engineer </h2>");
+
+    var  num = 16;//Number
+    var Name  = "Darshani"; //String
+    var flag = true; //boolean
+    num= "Kau";
+
+    var x;//declare
+    x=5; //initialization
+      
+    document.write(num);
+    alert(num);
+
+    //Addition
+    var a = 3;
+    var b = 4;
+    var result = "Dar Kau"+a + b;
+    document.write(result);
+
         </script>
     </head>
 
     <body>
-
 
     </body>
 
