--- a/one.html
+++ b/one.html
@@ -24,6 +24,50 @@
     var result = "Dar Kau"+a + b;
     document.write(result);
 
+    //else if statement
+    var num1 = 5;
+
+    if(num1 % 2 == 0)
+    {
+       document.write("Even Number");
+    }
+    else {
+        document.write("Odd number");
+    }
+
+    var num2 = -6;
+    if(num2>0){
+        document.write("Possitive Number");
+    }
+    else{
+        document.write("Negative Number");
+    }
+
+    var num3 = 88;
+    if(num3 > 0 && num3 % 2==0){
+        document.write("The number is Possitive and Even");
+    }
+    else if(num3 < 0){
+        document.write("The number is Possitive");
+    }
+    else if(num3 % 2 !== 0){
+        document.write("The number is Odd");
+    }
+    else{
+        document.write("The number is out of condition");
+    }
+
+
+    //switch statement
+
+    var day = 7;
+    switch(day)
+
+{
+    case 1:document.write("Monday");break;
+    case 7:document.write("Thurseday");break;
+    default:document.write("Invalid Day");
+}
         </script>
     </head>
 
